force-app/main/default/objects/Lead_Distribution_Rule__mdt/Lead_Distribution_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Lead Distribution Rule</label>
    <pluralLabel>Lead Distribution Rules</pluralLabel>
</CustomObject>