force-app/main/default/objects/Lead_Distribution_Rule__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Indicates whether the lead distribution rule is active.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>