force-app/main/default/objects/Lead_Distribution_Rule__mdt/fields/Assign_To_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_User_Id__c</fullName>
    <label>Assign To User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>