force-app/main/default/objects/Lead_Distribution_Rule__mdt/fields/Assignment_Method__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Method__c</fullName>
    <description
  >Assignment method used by the lead distribution rule.</description>
    <label>Assignment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Round Robin</fullName>
            </value>
            <value>
                <fullName>Fixed Owner</fullName>
            </value>
            <value>
                <fullName>Capacity Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>