force-app/main/default/objects/Lead_Distribution_Rule__mdt/fields/Capacity_Min__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Min__c</fullName>
    <label>Capacity Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>