force-app/main/default/objects/Lead_Distribution_Rule__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country matched by the lead distribution rule.</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>