force-app/main/default/objects/Lead_Distribution_Rule__mdt/fields/Distribution_Method__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Method__c</fullName>
    <description>Top-level routing strategy this rule applies.</description>
    <label>Distribution Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Territory</fullName>
            </value>
            <value>
                <fullName>Product Specialization</fullName>
            </value>
            <value>
                <fullName>Partner Tier</fullName>
            </value>
            <value>
                <fullName>Round Robin</fullName>
            </value>
            <value>
                <fullName>AI Recommendation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>