force-app/main/default/objects/Lead_Distribution_Rule__mdt/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>Industry matched by the lead distribution rule.</description>
    <label>Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>