force-app/main/default/objects/Lead_Distribution_Rule__mdt/fields/Partner_Account_Key__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_Key__c</fullName>
    <label>Partner Account Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>