force-app/main/default/objects/Lead_Distribution_Rule__mdt/fields/Partner_Tier__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tier__c</fullName>
    <description
  >Partner tier matched by the lead distribution rule.</description>
    <label>Partner Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>