force-app/main/default/objects/Lead_Distribution_Rule__mdt/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <description
  >Partner type matched by the lead distribution rule.</description>
    <label>Partner Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>