force-app/main/default/objects/Lead_Distribution_Rule__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region matched by the lead distribution rule.</description>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>